# doc_ingestor

./: .gitignore  README.md  __init__.py  __main__.py  adaptive.py  cleaning.py  cli.py  conftest.py  crawl_openvino_2026.py  extraction.py  markdown_extraction.py  models.py  pdf_extraction.py  pipeline.py  pyproject.toml  requirements.txt  seeds.py  structuring.py  test_adaptive_llms.py  test_adaptive_single_doc.py  test_adaptive_sitemap.py  test_gemini_integration.py  test_seed_filtering.py  test_seed_web_search.py  traversal.py
adaptive/: 01_core.py  02_state_machine.py  03_phase_routing.py  04_api_detection.py  05_llms_fetch.py  06_llms_parse.py  07_sitemap_fetch.py  08_sitemap_openapi.py  08_sitemap_parse.py  09_url_fetching.py  10_llm_client.py  11_script_execution.py  12_quality.py  13_feedback.py  14_self_correction.py  15_quality_judge.py  16_script_phases.py  17_openapi.py  __init__.py  agent_runtime.py  feedback_agent_tools.py  feedback_schema.py  playbook.py  script_agent_tools.py
cleaning/: __init__.py  blocks.py  record.py  text.py
cli_app/: 01_imports.py  02_parser.py  03_main_flow.py  04_resolution.py  05_logging.py  06_seed_collection.py  07_entrypoint.py  __init__.py
config/: __init__.py  env.py  settings.py
docs/: ARCHITECTURE.md  DESIGN.md
domain/: __init__.py  exceptions.py  record_factory.py  records.py
extraction/: __init__.py  document.py  heuristics.py  text_utils.py
llm/: __init__.py  base.py  gemini.py  ollama.py  providers.py  responses.py
markdown_extraction/: __init__.py  blocks.py  extractor.py  inline.py  util.py  walk.py
(+75 files in other folders)
